@@ -1,5 +1,8 @@
 2007-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* haskell-cabal.el (haskell-cabal-get-setting):
+	Handle multi-line settings.
+
 	* inf-haskell.el (inferior-haskell-load-file): Typo.
 
 2007-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>
